<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="@dimen/app_page_padding">

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/rideCostTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ride_cost"
        android:gravity="center"
        android:textSize="@dimen/app_normal_text_size"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/blue_200"
        app:layout_constraintTop_toBottomOf="@id/cancelButton"/>

    <TextView
        android:id="@+id/rideCostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_page_padding"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:textColor="@color/blue_200"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/rideCostTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/dummy_price" />

    <ImageButton
        android:id="@+id/coinIconImageButton"
        android:layout_width="@dimen/order_ride_btn_size"
        android:layout_height="@dimen/order_ride_btn_size"
        android:backgroundTint="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_coin"
        app:layout_constraintTop_toTopOf="@id/rideCostTextView"
        app:layout_constraintBottom_toBottomOf="@id/rideCostTextView"
        app:layout_constraintStart_toEndOf="@id/rideCostTextView"
        app:tint="@color/yellow_700" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/proceedToPaymentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/oval_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/proceed_to_payment"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/app_margin_size"
        app:layout_constraintTop_toBottomOf="@id/coinIconImageButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>